<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="Login" />-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fisa_medicala"
            android:icon="@drawable/ic_menu_fisa_medicala"
            android:title="@string/fisa_medicala_title"/>
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_sensors"
            android:title="@string/sensor_fragmetn_title"/>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/chat_fragment_title"/>
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_menu_alarms"
            android:title="@string/alarm_fragment_title"/>

    </group>
</menu>