<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/HOM_ScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient" >

    <LinearLayout
        android:id="@+id/svLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/llTopCardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryLight"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tcvConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient2">

                <ImageView
                    android:id="@+id/tcvLogoImageView"
                    android:layout_width="151dp"
                    android:layout_height="149dp"
                    android:contentDescription="@string/HOMtcvLogoImageView"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintHorizontal_bias="0.933"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.509" />

                <TextView
                    android:id="@+id/tcvGreetingTextView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/HOMtcvGreeetingTextView"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_bias="0.077"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/llInfoCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ttrTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"

                        android:text="@string/HOMicvTitleTextView"
                        android:textSize="28sp" />

                    <Space
                        android:id="@+id/ttrSpace"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/HOMInfoImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/HOMDoctorInfoButtonImage"
                        android:src="@drawable/ic_expand"
                        android:visibility="visible" />

                </LinearLayout>

                <TextView
                    android:id="@+id/icvDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/HOMicvDescriptionTextView"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/llBrowserImageButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@color/colorBackground"
                        android:contentDescription="@string/HOMBrowserImageButton"
                        android:src="@drawable/ic_browser" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TableLayout
            android:id="@+id/llRecomTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:background="@color/colorPrimaryLight"
            android:visibility="visible">

            <TableRow
                android:id="@+id/rtlRecomTitleRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_border_on_white">

                <TextView
                    android:id="@+id/rtrTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/HOMrtrTitleText"
                    android:textSize="28sp" />

            </TableRow>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/rtlNestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/nsvLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="vertical" />

            </androidx.core.widget.NestedScrollView>

        </TableLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/llBottomCardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="100dp"
            android:background="@color/colorBackground"
            android:visibility="gone"
            app:cardCornerRadius="0dp">

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>

