<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/RPA2_ConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResetPassword.ResetPassword2Fragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/clMainCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mcvConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- Background Image -->
            <androidx.cardview.widget.CardView
                android:id="@+id/mcvTopCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintBottom_toTopOf="@+id/mcvInputFieldCardView"
                app:layout_constraintTop_toTopOf="@+id/mcvBackgroundImage" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tcvConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tcvTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.197"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.506"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        android:text="@string/RPA2tcvTitleText"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/mcvBackgroundImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/background_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/green_background_spring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mcvInputFieldCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.9"
                android:background="@color/colorBackground" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ifcvConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/ifcvInformationText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_black_border"
                        android:text="@string/RPA2ifcvInformationText"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.1"
                        app:layout_constraintWidth_percent="0.8" />

                    <EditText
                        android:id="@+id/ifcvCodEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ifcvInformationText"
                        app:layout_constraintVertical_bias="0.3"
                        app:layout_constraintWidth_percent="0.9"
                        android:hint="@string/RPA2ifcvCodEdit"
                        android:inputType="textEmailAddress"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/RPA2ifcvConfirmButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="76dp"

                        android:backgroundTint="@color/colorSecondary"
                        android:text="@string/RPA2ifcvConfirmButton"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.926"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ifcvCodEdit"
                        app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintWidth_percent="0.3" />

                    <Button
                        android:id="@+id/RPA2ifcvBackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="76dp"

                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/RPA2ifcvBackButton"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/RPA2ifcvConfirmButton"
                        app:layout_constraintHorizontal_bias="0.22"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ifcvCodEdit"
                        app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintWidth_percent="0.3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>